ci(release): switch to CycloneDX SBOM diff + body_path to avoid output limit

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release Container Images (SBOM diff)
 on:
   push:
     tags:
-      - "v*.*"         # 例: v9.0.20250919.0 / v10.0.20250919.0
+      - "v*.*"          # 例: v9.0.20250919.0 / v10.0.20250919.0
   workflow_dispatch:
 
 permissions:
@@ -26,6 +26,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install syft, cyclonedx-cli & jq
+        shell: bash
         run: |
           set -euxo pipefail
           # syft
@@ -47,8 +48,8 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          TAG="${GITHUB_REF##*/}"                          # v9.0.x / v10.0.x
-          REL="$(echo "$TAG" | sed -E 's/^v([0-9]+)\..*$/\1/')"  # 9 / 10
+          TAG="${GITHUB_REF##*/}"                                 # v9.0.x / v10.0.x
+          REL="$(echo "$TAG" | sed -E 's/^v([0-9]+)\..*$/\1/')"    # 9 / 10
           PREV="$((REL-1))"
           echo "tag=$TAG"   >> "$GITHUB_OUTPUT"
           echo "rel=$REL"   >> "$GITHUB_OUTPUT"
@@ -78,8 +79,8 @@ jobs:
           fi
           OLD="almalinux${prev}-${flavor}:__old__"
           docker build -f "$oldfile" -t "$OLD" .
-          echo "has_old=true" >> "$GITHUB_OUTPUT"
-          echo "old_ref=$OLD" >> "$GITHUB_OUTPUT"
+          echo "has_old=true"   >> "$GITHUB_OUTPUT"
+          echo "old_ref=$OLD"   >> "$GITHUB_OUTPUT"
 
       - name: Generate SBOMs (CycloneDX JSON)
         id: sbom
@@ -118,13 +119,13 @@ jobs:
               fi
             done
             if [[ -n "$OLD_JSON" ]]; then
-              echo "has_old_sbom=true" >> "$GITHUB_OUTPUT"
-              echo "old_json=$OLD_JSON" >> "$GITHUB_OUTPUT"
+              echo "has_old_sbom=true"    >> "$GITHUB_OUTPUT"
+              echo "old_json=$OLD_JSON"   >> "$GITHUB_OUTPUT"
             else
-              echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+              echo "has_old_sbom=false"   >> "$GITHUB_OUTPUT"
             fi
           else
-            echo "has_old_sbom=false" >> "$GITHUB_OUTPUT"
+            echo "has_old_sbom=false"     >> "$GITHUB_OUTPUT"
           fi
 
       - name: Generate per-flavor SBOM diff (CycloneDX CLI)
@@ -163,7 +164,6 @@ jobs:
             echo
             echo "## Components diff"
             echo '```'
-            # ← ここを修正：from/to を JSON 指定し、変更バージョンも出力
             cyclonedx diff "$OLD_JSON" "$NEW_JSON" \
               --from-format json --to-format json \
               --component-versions || true
@@ -214,33 +214,28 @@ jobs:
           merge-multiple: true
 
       - name: Build release body (all flavors)
-        id: body
         shell: bash
         run: |
           set -euo pipefail
-          echo "Automated release for version ${{ steps.ver.outputs.tag }}." > body.txt
-          echo >> body.txt
-          for f in default base init micro minimal toolbox; do
-            if [[ -f "RELEASE_CHANGELOG-$f.md" ]]; then
-              echo "## $f" >> body.txt
-              echo >> body.txt
-              cat "RELEASE_CHANGELOG-$f.md" >> body.txt
-              echo >> body.txt
-            fi
-          done
-          delim="EOF_$(date +%s)_$RANDOM"
           {
-            echo "body<<$delim"
-            cat body.txt
-            echo "$delim"
-          } >> "$GITHUB_OUTPUT"
+            echo "Automated release for version ${{ steps.ver.outputs.tag }}."
+            echo
+            for f in default base init micro minimal toolbox; do
+              if [[ -f "RELEASE_CHANGELOG-$f.md" ]]; then
+                echo "## $f"
+                echo
+                cat "RELEASE_CHANGELOG-$f.md"
+                echo
+              fi
+            done
+          } > body.txt
 
       - name: Create Release (single shot)
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.ver.outputs.tag }}
           name: "Version ${{ steps.ver.outputs.tag }}"
-          body: ${{ steps.body.outputs.body }}
+          body_path: body.txt
           files: |
             RELEASE_CHANGELOG-*.md
             sbom/${{ steps.ver.outputs.rel }}/*.cdx.json
